--- a/Backend/.env
+++ b/Backend/.env
@@ -1,8 +1,4 @@
 PORT=5000
-PG_HOST=localhost
-PG_PORT=5432
-PG_USER=postgres
-PG_PASSWORD=123456
-PG_DATABASE=meandjo
 BASE_URL=localhost:5000
 JWT_SECRET=admin123
+MONGODB_URL=mongodb+srv://ichcha_db_user:Nexstar*1@menjo.w555ytk.mongodb.net/
