--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,10 @@
     "dayschedule-widget": "^1.2.6",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
