--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "dayschedule-widget": "^1.2.6",
+    "ldrs": "^1.1.9",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
